--- a/src/App.config
+++ b/src/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Savaged.BlackNotepad.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -11,4 +16,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Savaged.BlackNotepad.Properties.Settings>
+      <setting name="Left" serializeAs="String">
+        <value>40</value>
+      </setting>
+      <setting name="Top" serializeAs="String">
+        <value>40</value>
+      </setting>
+      <setting name="Width" serializeAs="String">
+        <value>1200</value>
+      </setting>
+      <setting name="Height" serializeAs="String">
+        <value>800</value>
+      </setting>
+    </Savaged.BlackNotepad.Properties.Settings>
+  </userSettings>
 </configuration>
