--- a/src/BlackNotepad.csproj
+++ b/src/BlackNotepad.csproj
@@ -68,7 +68,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonServiceLocator, Version=2.0.5.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
@@ -116,6 +116,7 @@
     <Compile Include="Converters\BoolToRadioButtonCheckedConverter.cs" />
     <Compile Include="Converters\LineEndingEnumToDisplayNameConverter.cs" />
     <Compile Include="Converters\TrueFalseToWrapNoWrapConverter.cs" />
+    <Compile Include="Extensions\SettingBindingExtension.cs" />
     <Compile Include="Extensions\StringEx.cs" />
     <Compile Include="Lookups\LineEndings.cs" />
     <Compile Include="Models\FileModel.cs" />
